crates/strider-analyze/tests/snapshots/v3__x86_kernel__control__nested_loops.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v6" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v8" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v8" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v9" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "7" -> "v9" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "11" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v12" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v12" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v9" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "13" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v14" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "13" -> "v14" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "13" -> "v12" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "11" -> "13" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "16" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v8" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v14" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v18" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "17" -> "v18" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "17" -> "v6" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "16" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "20" [label="Region", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v18" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "20" -> "21" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#88cc88", label=EAX, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#88cc88", label=EDX, fontcolor="#cccccc", fontsize=9];
  "24" -> "21" [color="#88cc88", label=ST0, fontcolor="#cccccc", fontsize=9];
  "25" -> "21" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "25" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "24" [label="init\nST0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "23" [label="φ EDX", shape=house, fillcolor="#163030"];
  "20" -> "23" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "26" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "23" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "27" [label="φ EDX", shape=house, fillcolor="#163030"];
  "16" -> "27" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "28" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "29" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="φ ECX", shape=house, fillcolor="#163030"];
  "11" -> "31" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "32" -> "31" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "31" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="φ EBX", shape=house, fillcolor="#163030"];
  "5" -> "34" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "35" -> "34" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "35" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "36" -> "34" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "36" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "34" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="φ EDX", shape=house, fillcolor="#163030"];
  "11" -> "30" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "29" -> "30" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "28" -> "30" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "28" [label="φ EDX", shape=house, fillcolor="#163030"];
  "5" -> "28" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "38" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "38" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "28" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "39" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "39" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "40" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v41" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v41" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="init\nEBX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "40" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "43" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="init\nESI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "43" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "46" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v47" [label="init\nESP", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v47" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "48" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "48" [label="init\nEDI", shape=Mdiamond, fillcolor="#1a3a5c"];
  "46" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "49" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "49" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "50" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="init\nEAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "51" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="φ EAX", shape=house, fillcolor="#163030"];
  "11" -> "53" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "52" -> "53" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" -> "53" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "51" [label="init\nEDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "51" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "51" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "60" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "50" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "50" -> "60" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "60" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "63" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
